@@ -1,11 +1,6 @@
 FROM openjdk:slim
 WORKDIR /tmp
-ENTRYPOINT ["java", \
-  "-XshowSettings", \
-  "-XX:+UseG1GC", \
-  "-XX:+ExitOnOutOfMemoryError", \
-  "-XX:MaxRAMFraction=2", \
-  "-XX:+UnlockExperimentalVMOptions", \
-  "-XX:+UseCGroupMemoryLimitForHeap", \
-  "-Duser.dir=/tmp"]
+ADD run.sh /run.sh
+RUN chmod +x /run.sh
+ENTRYPOINT ["/run.sh"]
 CMD ["-version"]
